--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,8 @@
+set -g mouse on
+
 set-option -g prefix C-w
 unbind-key C-w
 bind-key C-w send-prefix
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 
 bind h select-pane -L
 bind l select-pane -R
@@ -27,7 +24,10 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
 
-set -g mouse on
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 run '~/.tmux/plugins/tpm/tpm'
 
+set -g pane-border-format "#{pane_index}: #{pane_pid}"
